# GCompris

./: .gitignore  Makefile.mingw.in  config.h.mingw.in  configure.ac  global_win32.mak  po_report.pl
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am
src/boards/: py-gcompris-properties.c  py-mod-admin.c  py-mod-gcompris.c
src/gcompris/: Makefile.mingw  board.c  board.h  gcompris-board.h  gcompris.c  gcompris.h  gcompris_db.c  gcompris_db.h  plugin.h  properties.c  properties.h
src/goocanvas/src/: goocanvasmarshal.c
src/login-activity/: Makefile.am  dateformat.py  login.py
src/synchronization-activity/: .gitignore  Makefile.am  dateformat.py  init_path.sh  synchronization.py  synchronization.xml.in
tools/py2exe/: gcompris.py  setup.py
