## Process this file with automake to produce Makefile.in

install-activity:
	for i in $(SUBDIRS); do $(MAKE) -C $$i $@ || break 0; done

SUBDIRS = synchronization-activity \
	administration-activity \
	advanced_colors-activity \
	algebra_by-activity \
	algebra_guesscount-activity \
	algebra_minus-activity \
	algebra_plus-activity \
	algorithm-activity \
	babymatch-activity \
	babyshapes-activity \
	chronos-activity \
	click_on_letter-activity \
	click_on_letter_up-activity \
	clickanddraw-activity \
	clockgame-activity \
	color_mix-activity \
	color_mix_light-activity \
	colors-activity \
	crane-activity \
	details-activity \
	doubleentry-activity \
	draw-activity \
	drawnumber-activity \
	electric-activity \
	explore-activity \
	explore_farm_animals-activity \
	explore_world_animals-activity \
	explore_world_music-activity \
	fifteen-activity \
	findit-activity \
	geo_country-activity \
	geography-activity \
	gletters-activity \
	gnumch-equality-activity \
	gnumch-factors-activity \
	gnumch-inequality-activity \
	gnumch-multiples-activity \
	gnumch-primes-activity \
	goocanvas gcompris boards \
	guessnumber-activity \
	hangman-activity \
	hanoi-activity \
	hanoi_real-activity \
	hydroelectric-activity \
	imageid-activity \
	imagename-activity \
	intro_gravity-activity \
	land_safe-activity \
	lang-activity \
	lightsoff-activity \
	login-activity \
	magic_hat_minus-activity \
	magic_hat_plus-activity \
	maze-activity \
	maze2DRelative-activity \
	maze3D-activity \
	mazeInvisible-activity \
	memory-activity \
	memory_add-activity \
	memory_add_minus-activity \
	memory_add_minus_mult_div-activity \
	memory_add_minus_mult_div_tux-activity \
	memory_add_minus_tux-activity \
	memory_add_tux-activity \
	memory_div-activity \
	memory_div_tux-activity \
	memory_minus-activity \
	memory_minus_tux-activity \
	memory_mult-activity \
	memory_mult_div-activity \
	memory_mult_div_tux-activity \
	memory_mult_tux-activity \
	memory_sound-activity \
	memory_sound_tux-activity \
	memory_tux-activity \
	memory_wordnumber-activity \
	mining-activity \
	missing_letter-activity \
	money-activity \
	money_back-activity \
	money_back_cents-activity \
	money_cents-activity \
	mosaic-activity \
	note_names-activity \
	paintings-activity \
	photohunter-activity \
	piano_composition-activity \
	place_your_satellite-activity \
	planegame-activity \
	play_piano-activity \
	play_rhythm-activity \
	pythontemplate-activity \
	pythontest-activity \
	railroad-activity \
	readingh-activity \
	readingv-activity \
	redraw-activity \
	redraw_symmetrical-activity \
	reversecount-activity \
	scalesboard-activity \
	scalesboard_weight-activity \
	smallnumbers-activity \
	smallnumbers2-activity \
	sudoku-activity \
	tangram-activity \
	target-activity \
	traffic-activity \
	tuxpaint-activity \
	watercycle-activity \
	wordsgame-activity

EXTRA_DIST = runit.sh \
	createit.sh
